# auth-rust

./: Cargo.toml
src/: auth.rs  database.rs  error.rs  jwt.rs  main.rs  request_data.rs
src/domains/: mod.rs
src/domains/auth/: mod.rs  repository.rs  service.rs
src/domains/session/: mod.rs  repository.rs  service.rs
