[package]
name = "auth"
version = "0.1.0"
authors = ["Henry <henry@coolbet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
bcrypt = "0.10"
chrono = "0.4"
deadpool-postgres = "0.9"
futures = "0.3"
jsonwebtoken = "7.2"
serde = "1.0"
thiserror = "1.0"
tokio-postgres = "0.7"
# config="0.11"